--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="content_description_notification_icon">Icone de notificações da barra de ferramentas.</string>
     <string name="content_description_message_icon">"Icone de messagens diretas (DM) da barra de ferramentas. "</string>
     <string name="content_description_story" formatted="true">"Storie de %s não visualizado."</string>
+    <string name="content_description_feed_avatar">Avatar com imagem do autor da postagem.</string>
+    <string name="content_description_feed_image">Image exibindo a fotoda postagem.</string>
+    <string name="button_like_content_descripition">Botão curtir a postagem.</string>
+    <string name="button_menssagem_content_descripition">Botão para enviar postagem.</string>
+    <string name="button_comment_content_descripition">Botão para comentar a postagem.</string>
+    <string name="button_bookmark_content_descripition">Botão para marcar a postagem.</string>
 </resources>
